# palindrome-service

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: crud.py  database.py  main.py  models.py  palindrome.py  schemas.py
app/routes/: detection.py
app/utils/: logger_config.py
tests/: conftest.py  test_api.py  test_detections.py  test_normalization.py
